tests/miniJava/neg/005084_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java Main , int [] java ) { return 0 ; } }
